# podstawy-uczenia-maszynowego-24-25

./: .pre-commit-config.yaml  README.md  pyproject.toml
lab1/: notebook.ipynb
lab2/: notebook.ipynb
lab3/: notebook.ipynb
lab3/.ipynb_checkpoints/: notebook_filled-checkpoint.ipynb
lab4/: notebook.ipynb
lab5/: notebook.ipynb
lab6/: notebook.ipynb
