[project]
name = "basics-of-machine-learning"
version = "1.0.0"
description = ""
authors = [{name = "Jakub Adamczyk (j-adamczyk)", email = "jadamczy@agh.edu.pl"}]
readme = "README.md"

requires-python = ">=3.11,<3.12"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
feature-engine = "*"
jupyter = "*"
matplotlib = "*"
pandas = "2.*"
pyarrow = "*"
scikit-learn = "*"
seaborn = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
ruff = "*"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.ruff.lint]
ignore = [
    "E731",  # lambda expressions
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
